# mail-sender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.json  config.template.json  content.template.txt
src/: main.cpp
